feat(http-api): add harvest list endpoint
