# packages/server-core/src/main/kotlin/org/migor/feedless/repository/HarvestService.kt
@@ -6,6 +6,7 @@ import org.migor.feedless.AppLayer
 import org.migor.feedless.AppProfiles
 import org.migor.feedless.harvest.Harvest
 import org.migor.feedless.harvest.HarvestRepository
+import org.migor.feedless.harvest.HarvestUseCasePort
 import org.migor.feedless.source.SourceId
 import org.slf4j.LoggerFactory
 import org.springframework.context.annotation.Profile
@@ -17,7 +18,7 @@ import org.springframework.stereotype.Service
 @Profile("${AppProfiles.repository} & ${AppLayer.service}")
 class HarvestService(
   private val harvestRepository: HarvestRepository,
-) {
+) : HarvestUseCasePort {
 
   private val log = LoggerFactory.getLogger(HarvestService::class.simpleName)
 
@@ -27,4 +28,12 @@ class HarvestService(
       PageRequest.of(0, 1, Sort.by(Sort.Direction.DESC, "createdAt")).toPageableRequest()
     )
   }
+
+  override suspend fun findAllBySourceId(sourceId: SourceId, page: Int, pageSize: Int): List<Harvest> =
+    withContext(Dispatchers.IO) {
+      harvestRepository.findAllBySourceId(
+        sourceId,
+        PageRequest.of(page, pageSize, Sort.by(Sort.Direction.DESC, "createdAt")).toPageableRequest()
+      )
+    }
 }
